# hive-core

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  conanfile.txt  runconan.sh
core/: CMakeLists.txt
core/include/core/: Core.h
core/src/: CMakeLists.txt  Core.cpp
graphics/: CMakeLists.txt
graphics/include/graphics/: Graphics.h
graphics/src/: CMakeLists.txt  OffscreenRenderer.cpp  OnscreenRenderer.cpp  RenderService.cpp
graphics/test/: CMakeLists.txt  test.cpp
job-system/: CMakeLists.txt
job-system/include/jobsystem/: JobApi.h  JobContext.h  JobDecl.h  JobManager.h  JobSystem.h
job-system/src/: CMakeLists.txt  FiberExecutionImpl.cpp  Job.cpp  JobManager.cpp  SingleThreadedExecutionImpl.cpp  TimerJob.cpp
job-system/src/impl/: BasicJobManager.cpp
job-system/test/: CMakeLists.txt  test.cpp
kernel/: CMakeLists.txt
kernel/include/kernel/: Kernel.h
kernel/src/: CMakeLists.txt  Kernel.cpp  main.cpp
messaging/: CMakeLists.txt
messaging/include/messaging/: Message.h  Messaging.h  MessagingFactory.h
messaging/src/: CMakeLists.txt  JobBasedMessageBroker.cpp  JobBasedMessagingManager.cpp
messaging/test/: CMakeLists.txt  test.cpp
networking/src/: BoostJsonMessageConverter.cpp  BoostWebSocketConnection.cpp  BoostWebSocketConnectionEstablisher.cpp  BoostWebSocketConnectionListener.cpp  BoostWebSocketPeer.cpp  CMakeLists.txt  NetworkingManager.cpp  WebSocketMessage.cpp  WebSocketMessageConsumerJob.cpp  WebSocketppServer.cpp
plugins/demo-plugin/: CMakeLists.txt
plugins/demo-plugin/include/: DemoPlugin.h
plugins/demo-plugin/src/: DemoPlugin.cpp
plugins/tiled-composite-renderer-plugin/: CMakeLists.txt
plugins/tiled-composite-renderer-plugin/eval/: CMakeLists.txt  eval.cpp
plugins/tiled-composite-renderer-plugin/include/: TiledCompositeRenderer.h  TiledCompositeRendererPlugin.h  VulkanOperations.h
plugins/tiled-composite-renderer-plugin/src/: CMakeLists.txt  TiledCompositeRenderer.cpp  TiledCompositeRendererPlugin.cpp  VulkanOperations.cpp
resourcemgmt/: CMakeLists.txt
resourcemgmt/include/resourcemgmt/: Resource.h  ResourceManagement.h
resourcemgmt/src/: CMakeLists.txt  FileLoader.cpp  ThreadPoolResourceManager.cpp
resourcemgmt/test/: test.cpp
services/src/: CMakeLists.txt  LocalServiceRegistry.cpp  LocalServiceStub.cpp  RoundRobinServiceCaller.cpp  ServiceRequest.cpp  ServiceResponse.cpp  ServiceStub.cpp  WebSocketServiceMessagesConverter.cpp  WebSocketServiceRegistrationConsumer.cpp  WebSocketServiceRegistry.cpp  WebSocketServiceRequestConsumer.cpp  WebSocketServiceStub.cpp
services/src/local-only/: LocalOnlyServiceRegistry.cpp
services/src/websockets/: WebSocketServiceMessagesConverter.cpp  WebSocketServiceRegistrationConsumer.cpp  WebSocketServiceRegistry.cpp  WebSocketServiceRequestConsumer.cpp  WebSocketServiceResponseConsumer.cpp  WebSocketServiceStub.cpp
standalone/: CMakeLists.txt
standalone/src/: CMakeLists.txt  main.cpp
subsystems/: CMakeLists.txt
subsystems/common/: CMakeLists.txt
subsystems/common/docs/: common.md
subsystems/common/src/: BoostUuidGenerator.cpp  CMakeLists.txt  SpinLock.cpp  Timer.cpp  TimerManager.cpp
subsystems/common/test/: CMakeLists.txt  ExclusiveOwnershipTest.h  test.cpp
subsystems/data/: CMakeLists.txt
subsystems/data/docs/: data-layer.md
subsystems/data/src/: DataLayer.cpp  FunctionalChangeListener.cpp  LocalDataProvider.cpp
subsystems/data/test/: CMakeLists.txt  DataChangeListenerTest.h  test.cpp
subsystems/events/: CMakeLists.txt
subsystems/events/src/: CMakeLists.txt  JobBasedEventBroker.cpp
subsystems/events/test/: CMakeLists.txt  test.cpp
subsystems/graphics/: CMakeLists.txt
subsystems/graphics/docs/: graphics.md
subsystems/graphics/src/: CMakeLists.txt  CharEscapeRenderResultEncoder.cpp  GzipRenderResultEncoder.cpp  OffscreenRenderer.cpp  OnscreenRenderer.cpp  RenderSerivceRequest.cpp  RenderService.cpp  RenderServiceRequest.cpp
subsystems/graphics/test/: CMakeLists.txt  EncoderEvaluation.h  PeerSetup.h  test.cpp
subsystems/jobsystem/: CMakeLists.txt
subsystems/jobsystem/docs/: job-system.md
subsystems/jobsystem/src/: BoostFiberExecution.cpp  BoostFiberRecursiveSpinLock.cpp  BoostFiberSpinLock.cpp  CMakeLists.txt  FiberExecutionImpl.cpp  Job.cpp  JobManager.cpp  SingleThreadedExecutionImpl.cpp  TimerJob.cpp
subsystems/jobsystem/test/: CMakeLists.txt  test.cpp
subsystems/logging/: CMakeLists.txt
subsystems/logging/src/: CMakeLists.txt
subsystems/messaging/: CMakeLists.txt
subsystems/messaging/src/: CMakeLists.txt  JobBasedMessageBroker.cpp
subsystems/messaging/test/: CMakeLists.txt  test.cpp
subsystems/networking/: CMakeLists.txt
subsystems/networking/docs/: networking.md
subsystems/networking/src/: BoostJsonMessageConverter.cpp  BoostWebSocketConnection.cpp  BoostWebSocketConnectionEstablisher.cpp  BoostWebSocketConnectionListener.cpp  BoostWebSocketEndpoint.cpp  BoostWebSocketPeer.cpp  CMakeLists.txt  Message.cpp  MessageConsumerJob.cpp  MessageConverter.cpp  NetworkingManager.cpp  PeerMessage.cpp  PeerMessageConsumerJob.cpp  PeerMessageConverter.cpp  WebSocketMessage.cpp
subsystems/networking/test/: CMakeLists.txt  MessageConverterTest.h  MessagingEndpointTest.h  MultipartFormdataTest.h  UrlParserTest.h  WebSocketConverterTest.h  WebSocketEndpointTest.h  WebSocketPeerTest.h  test.cpp
subsystems/plugins/: CMakeLists.txt
subsystems/plugins/docs/: plugins.md
subsystems/plugins/src/: BoostPluginManager.cpp  CMakeLists.txt
subsystems/plugins/test/: CMakeLists.txt  TestPlugin.h  test.cpp
subsystems/properties/: CMakeLists.txt
subsystems/properties/src/: CMakeLists.txt  PropertyChangeListener.cpp  PropertyProvider.cpp
subsystems/properties/test/: CMakeLists.txt  PropertyChangeListenerTest.h  test.cpp
subsystems/resourcemgmt/: CMakeLists.txt
subsystems/resourcemgmt/src/: CMakeLists.txt  FileLoader.cpp  ThreadPoolResourceManager.cpp
subsystems/resourcemgmt/test/: CMakeLists.txt  test.cpp
subsystems/resources/: CMakeLists.txt
subsystems/scene/: CMakeLists.txt
subsystems/services/: CMakeLists.txt
(+390 files in other folders)
